// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`mixins link should render default style 1`] = `
.c0 {
  color: #222;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0:hover {
  color: #0A86CB;
  -webkit-text-decoration: none;
  text-decoration: none;
}

<mixinstest>
  <StyledComponent
    forwardedComponent={
      Object {
        "$$typeof": Symbol(react.forward_ref),
        "attrs": Array [],
        "componentStyle": ComponentStyle {
          "componentId": "mixinstest-zkb8de-0",
          "isStatic": false,
          "lastClassName": "c0",
          "rules": Array [
            "color:",
            [Function],
            ";text-decoration:",
            "none",
            ";&:hover{color:",
            [Function],
            ";text-decoration:",
            "none",
            ";}",
          ],
        },
        "displayName": "mixinstest",
        "foldedComponentIds": Array [],
        "render": [Function],
        "styledComponentId": "mixinstest-zkb8de-0",
        "target": "div",
        "toString": [Function],
        "usesTheme": false,
        "warnTooManyClasses": [Function],
        "withComponent": [Function],
      }
    }
    forwardedRef={null}
  >
    <div
      className="c0"
    />
  </StyledComponent>
</mixinstest>
`;

exports[`mixins link should render highlight style 1`] = `
.c0 {
  color: #0A86CB;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0:hover {
  color: #E40A43;
  -webkit-text-decoration: none;
  text-decoration: none;
}

<mixinstest
  highlight={true}
>
  <StyledComponent
    forwardedComponent={
      Object {
        "$$typeof": Symbol(react.forward_ref),
        "attrs": Array [],
        "componentStyle": ComponentStyle {
          "componentId": "mixinstest-zkb8de-0",
          "isStatic": false,
          "lastClassName": "c0",
          "rules": Array [
            "color:",
            [Function],
            ";text-decoration:",
            "none",
            ";&:hover{color:",
            [Function],
            ";text-decoration:",
            "none",
            ";}",
          ],
        },
        "displayName": "mixinstest",
        "foldedComponentIds": Array [],
        "render": [Function],
        "styledComponentId": "mixinstest-zkb8de-0",
        "target": "div",
        "toString": [Function],
        "usesTheme": false,
        "warnTooManyClasses": [Function],
        "withComponent": [Function],
      }
    }
    forwardedRef={null}
    highlight={true}
  >
    <div
      className="c0"
    />
  </StyledComponent>
</mixinstest>
`;
